--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/chicken-curry.html">Chicken Curry</a>
+    <a href="recipes/lasagna.html">Lasagna</a>
   </body>
 </html>
