--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 
   <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/chicken-curry.html">Chicken Curry</a>
-    <a href="recipes/lasagna.html">Lasagna</a>
-    <a href="recipes/guacamole.html">Guacamole</a>
+    <ul>
+      <li><a href="recipes/chicken-curry.html">Chicken Curry</a></li>
+      <li><a href="recipes/lasagna.html">Lasagna</a></li>
+      <li><a href="recipes/guacamole.html">Guacamole</a></li>
+    </ul>
+    
   </body>
 </html>
