--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="./css/style.css">
     <meta charset="UTF-8">
     <title>Odin Recipes</title>
   </head>
 
   <body>
-    <h1>Odin Recipes</h1>
-    <ul>
+    <h1 class="header">Odin Recipes</h1>
+    <ul class="link">
       <li><a href="recipes/chicken-curry.html">Chicken Curry</a></li>
       <li><a href="recipes/lasagna.html">Lasagna</a></li>
       <li><a href="recipes/guacamole.html">Guacamole</a></li>
     </ul>
-    
   </body>
 </html>
