--- a/recipes/chicken-curry.html
+++ b/recipes/chicken-curry.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="../css/style.css">
     <meta charset="UTF-8">
     <title>Odin Recipes: Chicken Curry</title>
   </head>
 
   <body>
-    <h1>Chicken Curry</h1>
+    <h1 id="recipename">Chicken Curry</h1>
 
     <img src="../images/chicken-curry.jpg" alt="Chicken Curry" height="250">
 
@@ -14,7 +15,7 @@
     <p>Try this easy chicken curry recipe for one of the simplest curry dishes you'll ever make! Just sauté chicken breasts with onion and curry powder, then serve over hot cooked rice with a side of mango chutney if desired.</p>
 
     <h2>Ingredients</h2>
-    <ul>
+    <ul class="ingredient">
       <li>¼ cup olive oil</li>
       <li>2 large onions, diced</li>
       <li>⅓ cup curry powder, or to taste</li>
