--- a/recipes/guacamole.html
+++ b/recipes/guacamole.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="../css/style.css">
     <meta charset="UTF-8">
     <title>Odin Recipes: Guacamole</title>
   </head>
 
   <body>
-    <h1>Guacamole</h1>
+    <h1 id="recipename">Guacamole</h1>
 
     <img src="../images/guacamole.jpg" alt="Guacamole" height="250">
 
@@ -14,7 +15,7 @@
     <p>This easy guacamole recipe is quick and simple to make. Great with tortilla chips or as a topping for Mexican foods!</p>
 
     <h2>Ingredients</h2>
-    <ul>
+    <ul class="ingredient">
       <li>2 ripe avocados, peeled and pitted</li>
       <li>1 small onion, finely chopped</li>
       <li>1 ripe tomato, chopped</li>
