--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="../css/style.css">
     <meta charset="UTF-8">
     <title>Odin Recipes: Lasagna</title>
   </head>
 
   <body>
-    <h1>Lasagna</h1>
+    <h1 id="recipename">Lasagna</h1>
 
     <img src="../images/lasagna.jpg" alt="Lasagna" height="250">
 
@@ -14,7 +15,7 @@
     <p>An easy lasagna recipe that saves me lots of time. This dish satisfies everyone in the family. Try it tonight!</p>
 
     <h2>Ingredients</h2>
-    <ul>
+    <ul class="ingredient">
       <li>1 pound lean ground beef</li>
       <li>1 (32 ounce) jar spaghetti sauce</li>
       <li>32 ounces cottage cheese</li>
